--- a/src/app/meu-perfil/alterar-senha.component.css
+++ b/src/app/meu-perfil/alterar-senha.component.css
@@ -74,7 +74,7 @@ label {
     gap: 16px;
 }
 
-#legitimuz-action-faceindex, #legitimuz-action-verify {
+#legitimuz-action-faceindex, #legitimuz-action-verify, #exDocCheckAction {
     flex: 1;
     width: 25%;
 }
