--- a/src/app/meu-perfil/alterar-senha.component.html
+++ b/src/app/meu-perfil/alterar-senha.component.html
@@ -109,21 +109,22 @@
                             label="{{'senhas.confirmarSenha' | translate}}"
                         ></app-error-msg>
                     </div>
-                    <div class="buttons">
-                        <button 
-                            class="btn btn-custom2 w-150 mr-4"
-                            type="button" 
-                            (click)="resetarForm()"
-                        >
-                            {{'geral.cancelar' | translate}}
-                        </button>
-                        <button class="btn btn-custom w-150" type="submit">
-                            {{'geral.salvar' | translate}}
-                        </button>
-                    </div>
+                <div class="buttons">
+                    <button
+                        class="btn btn-custom2 w-150 mr-4"
+                        type="button"
+                        (click)="resetarForm()"
+                    >
+                        {{'geral.cancelar' | translate}}
+                    </button>
+                    <button class="btn btn-custom w-150" type="submit">
+                        {{'geral.salvar' | translate}}
+                    </button>
+                </div>
                 </form>
+                <div *ngIf="faceMatchType == 'legitimuz'">
                 <div #legitimuz id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && !verifiedIdentity">
+                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -131,6 +132,7 @@
                         </div>
                         <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
                             [value]="cliente.cpf" />
+                        <input type="hidden" id="legitimuz-ref-id" [value]="token">
                         <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                             <i class="fa-solid fa-id-card"></i>
                             {{'saques.identityVerify' | translate}}
@@ -139,7 +141,7 @@
                     <div id="legitimuz-root"></div>
                 </div>
                 <div #legitimuzLiveness id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && verifiedIdentity">
+                    *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
@@ -147,12 +149,29 @@
                         </div>
                         <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
                             [value]="cliente.cpf" />
+                        <input type="hidden" id="legitimuz-ref-id" [value]="token">
                         <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                             <i class="fa-solid fa-id-card"></i>
                             {{'saques.identityVerify' | translate}}
                         </button>
                     </div>
                     <div id="legitimuz-root"></div>
+                </div>
+                </div>
+                <div *ngIf="faceMatchType == 'docCheck'">
+                    
+                    <div id="legitimuz">
+                        <div id="verify-identity-text">
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
+                            ('saques.identityVerifyNeeded' | translate)}}
+                        </div>
+                        <button id="exDocCheckAction"
+                            [data-ex-doccheck-document]="cliente.cpf"
+                            [data-ex-doccheck-document-hmac-hash]="hmacHash(cliente.cpf)" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                            <i class="fa-solid fa-id-card"></i>
+                            {{'saques.identityVerify' | translate}}
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
