adjust: adjusting to make clickable back page text

--- a/src/app/shared/layout/back-page/back-page/back-page.component.html
+++ b/src/app/shared/layout/back-page/back-page/back-page.component.html
@@ -5,7 +5,7 @@
         </button>
     </div>
 
-    <div *ngIf="showText" class="back-page__text">
+    <div *ngIf="showText" class="back-page__text" (click)="back()">
         <h4>Voltar</h4>
     </div>
 </div>
