--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -12,41 +12,41 @@
             <div class="text-line" *ngIf="loginGoogle">
                 <span>OU</span>
             </div>
-            <div class="login-mode">
-                <label>
+            <div class="login-mode" *ngIf="modoClienteHabilitado">
+                <label *ngIf="modoClienteHabilitado">
                     <input type="radio" formControlName="loginMode" value="email" (change)="setLoginMode('email')">
                     <span class="radio-custom"></span>
-                    {{ (modoCambistaHabilitado && !modoClienteHabilitado) 
-                        ? ('geral.loginCambista' | translate) 
-                        : ('geral.loginEmail' | translate) }}
-                  </label>                  
-                <label>
+                    {{ 'geral.loginEmail' | translate }}
+                </label>
+                <label *ngIf="modoClienteHabilitado">
                     <input type="radio" formControlName="loginMode" value="phone" (change)="setLoginMode('phone')">
                     <span class="radio-custom"></span>
                     {{ 'geral.loginPhone' | translate }}
+                </label>
+                <label *ngIf="modoCambistaHabilitado">
+                    <input type="radio" formControlName="loginMode" value="agent" (change)="setLoginMode('agent')">
+                    <span class="radio-custom"></span>
+                    {{ 'geral.loginUsername' | translate }}
                 </label>
             </div>
 
             <div class="form-group mb-4">
                  <div class="input-md" >
-                    <div class="input-prefix" *ngIf="form.get('loginMode').value === 'phone'">+55 | </div>
+                    <div class="input-prefix" *ngIf="form.get('loginMode').value == 'phone'">+55 | </div>
                      <input type="text" id="username" class="form-control inverted-out"
                            formControlName="username"
                            [ngClass]="applyCssInputError('username')"
-                           [attr.maxlength]="loginMode === 'phone' ? '15' : null"
+                           [attr.maxlength]="loginMode == 'phone' ? '15' : null"
                            [mask]="loginMode === 'phone' ? '(00) 00000-0000' : null"
                            [dropSpecialCharacters]="false"
-                           [style.paddingLeft]="loginMode === 'phone' ? '44px' : null"
+                           [style.paddingLeft]="loginMode == 'phone' ? '44px' : null"
 
                     />
-                    <label for="username" *ngIf="modoClienteHabilitado || modoCambistaHabilitado">
-                        {{ loginMode === 'phone' 
-                            ? ('geral.loginPhone' | translate) 
-                            : (modoClienteHabilitado ? ('geral.loginEmail' | translate) : ('geral.loginCambista' | translate))
-                        }}
-                    </label>                      
+                    <label for="username" *ngIf="loginMode == 'email'">{{'geral.loginEmail' | translate}}</label>         
+                    <label for="username" *ngIf="loginMode == 'phone'">{{'geral.loginPhone' | translate}}</label>         
+                    <label for="username" *ngIf="loginMode == 'agent'">{{'geral.loginUsername' | translate}}</label>              
                 </div>
-                <app-error-msg [control]="form.get('username')" label="{{ (modoCambistaHabilitado && !modoClienteHabilitado) ? ('geral.loginCambista' | translate) : ('geral.loginEmail' | translate) }}" class="text-left"></app-error-msg>
+                <app-error-msg [control]="form.get('username')" label="{{ 'geral.field' | translate }}" class="text-left"></app-error-msg>
             </div>
 
             <div class="form-group" [ngClass]="applyCssDivError('password')">
