--- a/src/app/shared/layout/modals/cliente-senha-modal/cliente-senha-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-senha-modal/cliente-senha-modal.component.html
@@ -6,12 +6,13 @@
     <div class="botao-direito"></div>
 </div>
 <div class="modal-body">
-    <ng-container>
+    <app-spinner *ngIf="showLoading"></app-spinner>
+    <ng-container *ngIf="!showLoading">
         <div class="content-header hide-mobile">
             <h2>{{'geral.alterarSenha' | translate}}</h2>
         </div>
         <div class="content-body">
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="faceMatchChangePasswordValidated">
                 <div class="fields">
                     <div class="form-group input-md">
                         <input
@@ -65,6 +66,38 @@
                     </button>
                 </div>
             </form>
+            <div #legitimuz id="legitimuz-container"
+                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && !verifiedIdentity">
+                    <div id="legitimuz">
+                        <div id="verify-identity-text">
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
+                            ('saques.identityVerifyNeeded' | translate)}}
+                        </div>
+                        <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
+                            [value]="cliente.cpf" />
+                        <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                            <i class="fa-solid fa-id-card"></i>
+                            {{'saques.identityVerify' | translate}}
+                        </button>
+                    </div>
+                    <div id="legitimuz-root"></div>
+                </div>
+                <div #legitimuzLiveness id="legitimuz-container"
+                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && verifiedIdentity">
+                    <div id="legitimuz">
+                        <div id="verify-identity-text">
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
+                            ('saques.identityVerifyNeeded' | translate)}}
+                        </div>
+                        <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
+                            [value]="cliente.cpf" />
+                        <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                            <i class="fa-solid fa-id-card"></i>
+                            {{'saques.identityVerify' | translate}}
+                        </button>
+                    </div>
+                    <div id="legitimuz-root"></div>
+                </div>
         </div>
     </ng-container>
 </div>
