--- a/src/app/auth/resetar-senha/resetar-senha.component.css
+++ b/src/app/auth/resetar-senha/resetar-senha.component.css
@@ -100,6 +100,12 @@ form .buttons {
     width: 25%;
 }
 
+@media only screen and (max-width: 1024px){
+    #legitimuz-action-verify, #legitimuz-action-faceindex {
+        width: 100%;
+    }
+}
+
 .btn-custom i {
     margin-right: 8px;
 }
