--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -207,6 +207,24 @@
                 <a (click)="abrirLogin()">{{'geral.entrarNaConta' | translate}}</a>
             </div>
         </div>
+
+        <div class="row" *ngIf="!provedorCaptcha">
+            <div class="col-12" [ngStyle]="{'text-align': 'left', 'margin-top': '10px'}">
+                <a href="https://policies.google.com/privacy" target="_blank" class="link-termos-politica">Política de Privacidade</a> do Google e os
+                <a href="https://policies.google.com/terms" target="_blank" class="link-termos-politica">Termos de Serviço</a> se aplicam.
+            </div>
+
+            <ng-container *ngTemplateOutlet="registerErrorTemplate"/>
+
+            <div class="col-12">
+                <button type="submit" class="btn btn-custom btn-block btn-cadastrar" [disabled]="submitting">{{'geral.cadastrar' | translate}}</button>
+            </div>
+            <div class="login">
+                {{'geral.jaPossuiUmaConta' | translate}}
+                <a (click)="abrirLogin()">{{'geral.entrarNaConta' | translate}}</a>
+            </div>
+        </div>
+
     </form>
 </div>
 
