--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -110,8 +110,11 @@
         <ng-template #cassinoGameList>
             <div class="bloco">
                 <div class="titulo" *ngIf="gameList && gameList.length">
-                    <app-back-page [showText]="false"></app-back-page>
-                    {{gameTitle | titlecase}}
+                    <app-back-page 
+                        [text]="gameTitle | titlecase"
+                        [category]="categorySelected"
+                        [provider]="gameFornecedor"
+                    ></app-back-page>
                 </div>
                 <div class="sem-evento empty-game-list" *ngIf="gameList && !gameList.length">
                     {{'geral.nenhumJogoEncontrado' | translate}}!
