--- a/src/app/esportes/live/listagem/live-listagem.component.html
+++ b/src/app/esportes/live/listagem/live-listagem.component.html
@@ -168,7 +168,7 @@
                                 class="flag-icon flag-icon-{{campeonato.value.regiao_sigla}} flag-icon-squared"></span>
                             <span class="campeonato-nome">
                                 <ng-template *ngIf="sportId == footballId">{{campeonato.value.regiao}}: </ng-template>
-                                {{campeonato.value.regiao | uppercase}}: {{campeonato.value.nome}}
+                                <span *ngIf="campeonato.regiao && (sportbook == 'lsports' || sportId == basketballId)">{{campeonato.regiao | uppercase}}: </span>{{campeonato.value.nome}}
                             </span>
                         </span>
 
@@ -202,12 +202,12 @@
                                         <div class="time-a">
                                             <div class="escudo-container">
                                             <span *ngIf="jogo.value.time_a_img; else defaulImageA" class="escudo">
-                                                <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.value.time_a_img}}.png"
+                                                <img src="https://cdn.wee.bet/img/{{teamShield(sportId)}}/m/{{jogo.value.time_a_img}}.png"
                                                      class="escudo-img" size="s">
                                             </span>
                                                 <ng-template #defaulImageA class="escudo">
                                                 <span class="escudo">
-                                                    <img src="https://cdn.wee.bet/img/times_v2/m/default.png"
+                                                    <img src="https://cdn.wee.bet/img/{{teamShield(sportId)}}/m/default.png"
                                                          class="escudo-img">
                                                 </span>
                                                 </ng-template>
@@ -218,12 +218,12 @@
                                         <div class="time-b">
                                             <div class="escudo-container">
                                             <span *ngIf="jogo.value.time_b_img; else defaulImageB" class="escudo">
-                                                <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.value.time_b_img}}.png"
+                                                <img src="https://cdn.wee.bet/img/{{teamShield(sportId)}}/m/{{jogo.value.time_b_img}}.png"
                                                      class="escudo-img" size="s">
                                             </span>
                                                 <ng-template #defaulImageB class="escudo">
                                                 <span class="escudo">
-                                                    <img src="https://cdn.wee.bet/img/times_v2/m/default.png"
+                                                    <img src="https://cdn.wee.bet/img/{{teamShield(sportId)}}/m/default.png"
                                                          class="escudo-img">
                                                 </span>
                                                 </ng-template>
