--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -1056,6 +1056,10 @@ body .change-theme {
     display: block;
 }
 
-.hidden-header, .header-submenu {
+.hidden-header {
+    display: none !important;
+}
+
+.hidden-header .header-submenu {
     display: none !important;
 }
