feat: Added "Last Accesses" page to "Profile" menu with filtering and pagination functionalities. Added custom pagination for navigating records.

--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -256,6 +256,11 @@
                                 <span class="regiao-nome">{{'geral.alterarSenha' | translate}}</span>
                             </a>
                         </li>
+                        <li class="cambista-subitem">
+                            <a [routerLink]="['/ultimos-acessos']" routerLinkActive="router-link-active">
+                                <span class="regiao-nome">{{'geral.lastAccesses' | translate}}</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
