--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
@@ -40,7 +40,10 @@
                     <div class="jogo-destaque">
                         <div class="header">
                             <span class="campeonato-nome" [title]="jogoDestaque.campeonato?.nome">
-                                {{ jogoDestaque.campeonato?.regiao | uppercase }}: {{ jogoDestaque.campeonato?.nome | uppercase }}
+                                <span *ngIf="jogoDestaque.campeonato.regiao && sportbook == 'lsports'">
+                                    {{ jogoDestaque.campeonato.regiao | uppercase }}:
+                                </span>
+                                {{ (jogoDestaque.campeonato.alias ? jogoDestaque.campeonato.alias : jogoDestaque.campeonato.nome) | uppercase }}
                             </span>
                             <span>
                                 {{ jogoDestaque.horario | moment: '' : true}}{{ jogoDestaque.horario | moment:"/ H:mm"}}
