adjust: remove translate on type filter.

--- a/src/app/acessos-clientes/last-accesses.component.html
+++ b/src/app/acessos-clientes/last-accesses.component.html
@@ -46,7 +46,7 @@
 
                 <select class="form-control inverted-out" formControlName="type">
                     <option value="">{{ 'geral.todos' | translate }}</option>
-                    <option value="login">{{ 'Login' | translate }}</option>
+                    <option value="login">{{ 'Login' }}</option>
                     <option value="logout">{{ 'Logout' }}</option>
                 </select>
                 <button class="btn btn-custom" type="submit">{{ 'geral.filtrar' | translate }}</button>
