--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             <i class="fa fa-times" aria-hidden="true"></i>
         </a>
         <ng-container>
-            <img class="imagem-inicial" src="https://cdn.wee.bet/img/info/demo.png" class="info-image">
+            <img class="imagem-inicial" src="https://wb-assets.com/img/info/demo.png" class="info-image">
         </ng-container>
     </div>
 </ng-template>
