--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -27,7 +27,7 @@
                                             <i class="radio"></i>
                                         </div>
                                         <div class="payment-method-icon"
-                                            [ngStyle]="{'background-image': 'url(https://cdn.wee.bet/img/cassino/logos/' + paymentMethod + '.png)'}"
+                                            [ngStyle]="{'background-image': 'url(https://wb-assets.com/img/logos/' + paymentMethod + '.png)'}"
                                         ></div>
                                         <div>
                                             <span class="payment-method-name">{{paymentMethod | formatPaymentMethod}}</span>
