--- a/src/app/esportes/destaques/destaques.component.html
+++ b/src/app/esportes/destaques/destaques.component.html
@@ -18,22 +18,22 @@
                                 <div class="time1">
                                     <span class="text-center">{{ jogoDestaque.time_a_nome }}</span>
                                     <span *ngIf="jogoDestaque.time_a_img; else defaulImage" class="escudo">
-                                        <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/{{jogoDestaque.time_a_img}}.png" size="s" class="escudo-img">
+                                        <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/{{jogoDestaque.time_a_img}}.png" size="s" class="escudo-img">
                                     </span>
                                     <ng-template #defaulImage>
                                         <span class="escudo">
-                                            <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/default.png" size="s" class="escudo-img">
+                                            <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/default.png" size="s" class="escudo-img">
                                         </span>
                                     </ng-template>
                                 </div>
                                 <span class="separador-times">-</span>
                                 <div class="time2">
                                     <span *ngIf="jogoDestaque.time_a_img; else defaulImage" class="escudo">
-                                        <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/{{jogoDestaque.time_b_img}}.png" size="s" class="escudo-img">
+                                        <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/{{jogoDestaque.time_b_img}}.png" size="s" class="escudo-img">
                                     </span>
                                     <ng-template #defaulImage>
                                         <span class="escudo">
-                                            <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/default.png" size="s" class="escudo-img">
+                                            <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/default.png" size="s" class="escudo-img">
                                         </span>
                                     </ng-template>
                                     <span class="text-center flex-grow-1">{{ jogoDestaque.time_b_nome }}</span>
