--- a/src/app/esportes/futebol/default/jogo/futebol-jogo.component.css
+++ b/src/app/esportes/futebol/default/jogo/futebol-jogo.component.css
@@ -70,7 +70,7 @@
     position: relative;
     height: 77%;
     max-height: 300px;
-    background-image: url("https://cdn.wee.bet/img/stadium-background.png");
+    background-image: url("https://wb-assets.com/img/stadium-background.png");
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
