--- a/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.css
+++ b/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.css
@@ -70,7 +70,7 @@
     position: relative;
     height: 20vh;
     max-height: 300px;
-    background-image: url("https://cdn.wee.bet/img/quadra-basquete-background.png");
+    background-image: url("https://wb-assets.com/img/quadra-basquete-background.png");
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
