--- a/src/app/esportes/generico/listagem/generico-listagem.component.html
+++ b/src/app/esportes/generico/listagem/generico-listagem.component.html
@@ -143,12 +143,12 @@
                                     <div class="escudo-container">
                                         <div *ngIf="exibirEscudo()">
                                             <span *ngIf="jogo.time_a_img; else defaulImageA" class="escudo">
-                                                <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/{{jogo.time_a_img}}.png"
+                                                <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/{{jogo.time_a_img}}.png"
                                                      class="escudo-img" size="s">
                                             </span>
                                             <ng-template #defaulImageA>
                                                 <span class="escudo">
-                                                    <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/default.png"
+                                                    <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/default.png"
                                                         class="escudo-img">
                                                 </span>
                                             </ng-template>
@@ -158,12 +158,12 @@
                                     <div class="escudo-container">
                                         <div *ngIf="exibirEscudo()">
                                             <span *ngIf="jogo.time_b_img; else defaulImageB" class="escudo">
-                                                <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/{{jogo.time_b_img}}.png"
+                                                <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/{{jogo.time_b_img}}.png"
                                                     class="escudo-img" size="s">
                                             </span>
                                             <ng-template #defaulImageB>
                                                 <span class="escudo">
-                                                    <img src="https://cdn.wee.bet/img/{{teamShieldsFolder}}/m/default.png"
+                                                    <img src="https://wb-assets.com/img/{{teamShieldsFolder}}/m/default.png"
                                                         class="escudo-img">
                                                 </span>
                                             </ng-template>
