--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -219,7 +219,7 @@
                         </a>
                         <div class="hide-desktop" *ngIf="!isCliente">
                             <div class="info-profile">
-                                <img src="https://cdn.wee.bet/img/blank-profile-picture.png" width="40">
+                                <img src="https://wb-assets.com/img/blank-profile-picture.png" width="40">
                                 <h4 class="menu-conta-header">{{ usuario.nome | titlecase }}</h4>
                             </div>
                             <div class="saldos-container">
@@ -400,7 +400,7 @@
                         </div>
                         <div class="hide-desktop" *ngIf="isCliente">
                             <div class="info-profile" *ngIf="isCliente">
-                                <img src="https://cdn.wee.bet/img/blank-profile-picture.png" width="40">
+                                <img src="https://wb-assets.com/img/blank-profile-picture.png" width="40">
                                 <h4 class="menu-conta-header">{{ usuario.nome | titlecase }}</h4>
                             </div>
                             <div class="saldos-container">
@@ -580,11 +580,11 @@
                         </div>
                         <div class="hide-mobile">
                             <div class="info-profile" *ngIf="isCliente">
-                                <img src="https://cdn.wee.bet/img/blank-profile-picture.png" width="40">
+                                <img src="https://wb-assets.com/img/blank-profile-picture.png" width="40">
                                 <h4 class="menu-conta-header">{{ usuario.nome | titlecase }}</h4>
                             </div>
                             <div class="info-profile" *ngIf="!isCliente">
-                                <img src="https://cdn.wee.bet/img/blank-profile-picture.png" width="40">
+                                <img src="https://wb-assets.com/img/blank-profile-picture.png" width="40">
                                 <h4 class="menu-conta-header">{{ usuario.nome | titlecase }}</h4>
                             </div>
                             <div class="saldos-container">
