feat: indique ganhe when closed will only reappear after 24 hours

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="indique-ganhe-card" #indiqueGanheCard
-    *ngIf="indiqueGanheHabilitado && (!isLoggedIn || isCliente) && !activeGameCassinoMobile()">
+    *ngIf="isIndiqueGanheVisible">
     <div class="indique-ganhe-card-content">
         <div>
             {{
