--- a/src/app/cupom/esportes/cupom-esportes.component.css
+++ b/src/app/cupom/esportes/cupom-esportes.component.css
@@ -18,9 +18,14 @@
 }
 
 .aposta-item{
+    color: black;
     padding:15px 0;
     margin: 15px 0;
     background-color:#ebeaea
+}
+
+.informacoes-aposta, .numero{
+    color: black;
 }
 
 .div-1{
