Feat: Added docCheck when registering, changing and resetting passwords and withdrawing

--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -281,7 +281,7 @@
     gap: 16px;
 }
 
-#legitimuz-action-verify, #legitimuz-action-faceindex {
+#legitimuz-action-faceindex, #legitimuz-action-verify, #exDocCheckAction {
     flex: 1;
     width: 25%;
 }
