--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -83,37 +83,58 @@
                         </div>
                     </form>
                 </div>
-                <div #legitimuz id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && !verifiedIdentity">
+                <div *ngIf="faceMatchType == 'legitimuz'">
+                    <div #legitimuz id="legitimuz-container"
+                        *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && !verifiedIdentity">
+                        <div id="legitimuz">
+                            <div id="verify-identity-text">
+                                {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
+                                ('saques.identityVerifyNeeded' | translate)}}
+                            </div>
+                            <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
+                                [value]="dataUserCPF" />
+                            <input type="hidden" id="legitimuz-ref-id" [value]="token">
+                            <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                                <i class="fa-solid fa-id-card"></i>
+                                {{'saques.identityVerify' | translate}}
+                            </button>
+                        </div>
+                        <div id="legitimuz-root"></div>
+                    </div>
+                    <div #legitimuzLiveness id="legitimuz-container"
+                        *ngIf="faceMatchEnabled && faceMatchChangePassword && !faceMatchChangePasswordValidated && verifiedIdentity">
+                        <div id="legitimuz">
+                            <div id="verify-identity-text">
+                                {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
+                                ('saques.identityVerifyNeeded' | translate)}}
+                            </div>
+                            <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
+                                [value]="dataUserCPF" />
+                            <input type="hidden" id="legitimuz-ref-id" [value]="token">
+                            <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                                <i class="fa-solid fa-id-card"></i>
+                                {{'saques.identityVerify' | translate}}
+                            </button>
+                        </div>
+                        <div id="legitimuz-root"></div>
+                    </div>
+                    </div>
+
+                <div *ngIf="faceMatchType == 'docCheck'">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
                             ('saques.identityVerifyNeeded' | translate)}}
                         </div>
-                        <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
-                            [value]="dataUserCPF" />
-                        <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                        <button id="exDocCheckAction"
+                            [data-ex-doccheck-document]="cliente.cpf"
+                            [data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom" *ngIf="!disapprovedIdentity"
+                            [data-ex-doccheck-force-enrollment]="cliente.verifiedIdentity ? false : true"
+                            >
                             <i class="fa-solid fa-id-card"></i>
                             {{'saques.identityVerify' | translate}}
                         </button>
                     </div>
-                    <div id="legitimuz-root"></div>
-                </div>
-                <div #legitimuzLiveness id="legitimuz-container"
-                    *ngIf="faceMatchEnabled && !faceMatchChangePasswordValidated && verifiedIdentity">
-                    <div id="legitimuz">
-                        <div id="verify-identity-text">
-                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
-                            ('saques.identityVerifyNeeded' | translate)}}
-                        </div>
-                        <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
-                            [value]="dataUserCPF" />
-                        <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
-                            <i class="fa-solid fa-id-card"></i>
-                            {{'saques.identityVerify' | translate}}
-                        </button>
-                    </div>
-                    <div id="legitimuz-root"></div>
                 </div>
             </div>
         </div>
