fix: adjusting shared buttons in gameview

--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -46,9 +46,9 @@
                             </ng-template>
                             <p class="game-provider">{{ gameFornecedor }}</p>
                             <div class="social-buttons-container">
-                                <a href="{{linkWhatsapp}}" target="_blank" class="social-buttons whatsapp"></a>
-                                <a href="{{linkFacebook}}" target="_blank" class="social-buttons facebook"></a>
-                                <a href="{{linkTelegram}}" target="_blank" class="social-buttons telegram"></a>
+                                <a href="{{linkWhatsapp}}" target="_blank" rel="noopener noreferrer" class="social-buttons whatsapp"></a>
+                                <a href="{{linkFacebook}}" target="_blank" rel="noopener noreferrer" class="social-buttons facebook"></a>
+                                <a href="{{linkTelegram}}" target="_blank" rel="noopener noreferrer" class="social-buttons telegram"></a>
                                 <a target="_blank" class="social-buttons copy" (click)="copyLink()"></a>
                             </div>
                         </div>
