--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
@@ -182,11 +182,11 @@
                                     </p>
                                 </ng-template>
                             </div>
-                        </div>                    
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>    
+        </div>
     </ng-container>
 </div>
 <div class="modal-footer">
@@ -200,7 +200,7 @@
     </div>
     <div class="button-container">
         <button class="btn btn-custom btn-block" (click)="encerrarAposta(aposta)" [disabled]="simulando" *ngIf="podeEncerrar(aposta)">
-            {{ simulando ? 'Calculando...' : 'Encerrar Aposta' }}
+            {{ simulando ? 'Calculando...' : 'Encerrar aposta no valor de ' + (valorEncerramento | currency) }}
         </button>
         <button class="btn btn-outline-custom" *ngIf="itemSelecionado && !simulando && !falhaSimulacao" (click)="descartar()">
             Cancelar
