--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -175,12 +175,9 @@
                         {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
                         ('saques.identityVerifyNeeded' | translate)}}
                     </div>
-                    <button id="exDocCheckAction"
-                        [data-ex-doccheck-document]="dataUserCPF"
-                        [data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom" *ngIf="!disapprovedIdentity"
-                        [data-ex-doccheck-force-enrollment]="true"
-                        [disabled]="faceMatchRequested || this.showLoading"
-                        >
+                    <button id="exDocCheckAction" *ngIf="!disapprovedIdentity" [attr.data-ex-doccheck-document]="dataUserCPF"
+                        [attr.data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom"
+                        [attr.data-ex-doccheck-force-enrollment]="true" [disabled]="faceMatchRequested || this.showLoading">
                         <i class="fa-solid fa-id-card"></i>
                         {{'saques.identityVerify' | translate}}
                     </button>
