--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -16,7 +16,7 @@
                 <a *ngIf="!fullscreen" class="btn-cassino screen-adjust" (click)="openFullscreenMob()"><i class="fa fa-expand"></i></a>
                 <a *ngIf="fullscreen" class="btn-cassino screen-adjust" (click)="exitFullscreenMob()"><i class="fa fa-compress"></i></a>
             </ng-container>
-            <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
+            <a (click)="back()" id="close-btn-game" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
         </div>
     </div>
     <ng-container>
